# esp8266-rtos-core

./: Application.h  CMakeLists.txt  Core.h  Env.h  EventBus.h  Kconfig  Logger.cpp  Properties.h  README.md  Registry.cpp  Registry.h  component.mk  sdkconfig.esp01  sdkconfig.esp12e
core/: Kconfig  component.mk  idf_component.yml
core/data/: config-wifi.json
core/src/: Event.h  EventBus.cpp  Timer.cpp  Timer.h
core/src/system/config/: ConfigPortal.h
core/src/system/ota/: OtaService.h
core/src/system/wifi/: WifiService.h
data/: index.html
example/main/: esp8266-rtos-app.cpp
src/: Event.h  EventBus.h  Logger.h  Properties.cpp  Registry.h  Test.cpp  Utils.h
src/system/: SystemService.h
src/system/command/: CommandService.cpp  CommandService.h
src/system/config/: ConfigPortal.cpp  ConfigPortal.h  ConfigurationService.cpp  ConfigurationService.h
src/system/mdns/: MdnsService.cpp  MdnsService.h
src/system/mqtt/: MqttService.cpp  MqttService.h
src/system/ota/: CMakeLists.txt  OtaService.cpp  OtaService.h  esp_httpd_ota.h
src/system/smart_config/: SmartConfigService.cpp  SmartConfigService.h
src/system/storage/: Storage.h
src/system/wifi/: WifiService.cpp
system/: SystemProperties.h  SystemService.h
system/command/: CommandService.cpp  CommandService.h
system/config/: ConfigPortal.cpp  ConfigurationService.cpp  ConfigurationService.h
system/console/: Console.cpp  Console.h
system/mqtt/: MqttService.h
system/ota/: OtaService.cpp  esp_httpd_ota.cpp
system/storage/: Storable.cpp
system/wifi/: WifiService.cpp
